--- a/trunk/core/README
+++ b/trunk/core/README
@@ -1,3 +1,4 @@
 使用VC2005或以上版本工程编译。
 涉及到链接库路径问题，Lua和Ruby工程Release版不可直接执行（需要将OUE.so，Base.dll及程序拷贝到工程所在目录才能执行），只有Debug版可以直接执行。
-运行时请将msvcrt-ruby190.dll拷贝到Release或Debug文件夹下。
+运行时请将msvcrt-ruby190.dll拷贝到Release或Debug文件夹下。并配置好相关文件的路径。(可能有图片，script等)
+目录里带有VC2005工程文件，也可用cmake重新构建工程。
