Edited wiki page StartingPoint through web user interface.

--- a/wiki/StartingPoint.wiki
+++ b/wiki/StartingPoint.wiki
@@ -14,7 +14,8 @@
 = 问题 =
   * C++的dll不同编译器间并不兼容，而C式面向对象编程又过于繁琐。目前采用折衷方式，采用纯虚接口+内联方式可以使得对象内存布局相同的编译器可以兼容（例如VC各种版本）。
   * windows平台上，如果使用旧版本SDK开发的插件，放在了有新版本核心的电脑上，可能会造成配置错误（未验证）。
-  * 上述种种问题表明，所有代码开源并在本地重编译可解决。唯一问题就是某个插件更新时所有依赖于该插件的插件需要重编译。
+
+  上述种种问题表明，所有代码开源并在本地重编译可解决。唯一问题就是某个插件更新时所有依赖于该插件的插件需要重编译。
 
 = 参考 =
 以下参考可能带来一些启发。
