Edited wiki page OwnershipProblem through web user interface.

--- a/wiki/OwnershipProblem.wiki
+++ b/wiki/OwnershipProblem.wiki
@@ -45,4 +45,4 @@ SWIG的做法是为每个脚本中的对象添加一名成员own，当own为true
 == 其他解决方案 ==
  * 对脚本任何操作都不转移Ownership。（相当于不解决，但可以减少系统复杂性）可以尝试用脚本语言再对C++导出符号做一层封装。
  * 使用引用计数，这样便没有明确的Ownership。但这样的话不支持引用计数的类型就不能够实现转移Ownership的策略。同时也增加了系统复杂度（众所周知，引用计数有环引用的问题）。
- * 令脚本的VALUE值被每个向脚本导出的对象所持有，这样可以保证脚本与对象一一对应，（尽管SWIG中有trackobject的功能，但是能力比较有限，无法追踪导出对象在C++程序中被销毁的情况）可以保证高度统一。困难这样做很难得到SWIG的支持，其次会增加C++程序的难度，可能与导出语言耦合严重，而且同上，不支持的类型不能导出（这里指一些轻量级对象，如果全部支持的话可能会拖慢时间效率）。这样做最大的缺点是增加编写插件的难度。
+ * 令脚本的VALUE值被每个向脚本导出的对象所持有，然后可以调用脚本库的函数来阻止其被垃圾回收系统回收，这样又可以保证脚本与对象一一对应，（尽管SWIG中有trackobject的功能，但是能力比较有限，无法追踪导出对象在C++程序中被销毁的情况）可以保证高度统一。困难这样做很难得到SWIG的支持，其次会增加C++程序的难度，可能与导出语言耦合严重，而且同上，不支持的类型不能导出（这里指一些轻量级对象，如果全部支持的话可能会拖慢时间效率）。这样做最大的缺点是增加编写插件的难度。另外，该方法同引用计数一样，同样有环引用的问题，例如一个对象has-a一个脚本中定义的类的实例，并且实例引用了该对象，且对象的Ownership在脚本一端，这样两个对象都不能销毁。
