Edited wiki page OwnershipProblem through web user interface.

--- a/wiki/OwnershipProblem.wiki
+++ b/wiki/OwnershipProblem.wiki
@@ -46,3 +46,13 @@ SWIG的做法是为每个脚本中的对象添加一名成员own，当own为true
  * 对脚本任何操作都不转移Ownership。（相当于不解决，但可以减少系统复杂性）可以尝试用脚本语言再对C++导出符号做一层封装。
  * 使用引用计数，这样便没有明确的Ownership。但这样的话不支持引用计数的类型就不能够实现转移Ownership的策略。同时也增加了系统复杂度（众所周知，引用计数有环引用的问题）。
  * 令脚本的VALUE值被每个向脚本导出的对象所持有，然后可以调用脚本库的函数来阻止其被垃圾回收系统回收，这样又可以保证脚本与对象一一对应，（尽管SWIG中有trackobject的功能，但是能力比较有限，无法追踪导出对象在C++程序中被销毁的情况）可以保证高度统一。困难这样做很难得到SWIG的支持，其次会增加C++程序的难度，可能与导出语言耦合严重，而且同上，不支持的类型不能导出（这里指一些轻量级对象，如果全部支持的话可能会拖慢时间效率）。这样做最大的缺点是增加编写插件的难度。另外，该方法同引用计数一样，同样有环引用的问题，例如一个对象has-a一个脚本中定义的类的实例，并且实例引用了该对象，且对象的Ownership在脚本一端，这样两个对象都不能销毁。
+
+= 万有引擎的Ownership =
+svn checkout core/OUE/swig来获取接口文件。
+VDISOWN typemap会使得传入参数失去Ownership，并保证参数在传入时拥有Ownership。
+%newobject标记的函数会返回一个带Ownership的对象（其他的还有构造函数等）。如果一个对象又得到了Ownership是从函数返回的Wrapper带有的Ownership。（注：由于一些问题，一个C++对象可能对应多个脚本对象，这些脚本对象并不相等，可以理解为C++对象的多个Wrapper，在上述情况，调用者的Wrapper并不会获得Ownership，而是返回一个带Ownership的Wrapper）
+
+如果一个函数没有VDISOWN标记，又不持有某个参数的引用，则该参数引用对象可能会被销毁。
+如果%newobject标记的函数返回值不被赋值到某个脚本变量时，该对象可能会被回收。
+
+这是脚本中的C++残留内存管理问题。
