添加IVideo::getAvailableMode等的脚本导出，以及脚本导出对List部分支持。

--- a/core/README
+++ b/core/README
@@ -5,6 +5,12 @@
 目录里带有VC2005工程文件，也可用cmake重新构建工程。
 
 ----------------------------------------------------------
+使用的开源库
+ruby 190(修改过）
+libogg
+libvorbis
+
+----------------------------------------------------------
 Ruby的编译：win32下会导出fclose等与C运行库重复的符号，致使程序不能正常工作。方法是注释掉win32下mkexports.rb 44行处的循环（该循环是找寻头文件的宏定义并将其加入到dll导出符号中）。然后make msvcr80-ruby191.dll。
 VC编译方法。
 vcvars32
